@@ -10779,6 +10779,11 @@ a product of disjoint cycles (\kbd{cyc}); return $p^n$ (as a \kbd{cyc}).
 given as a product of disjoint cycles, return the orbits of the subgroup
 generated by $p$ on $\{1,2,\ldots,n\}$.
 
+\fun{GEN}{Z_to_perm}{long n, GEN x} as \kbd{numtoperm}, returning a
+\typ{VECSMALL}.
+
+\fun{GEN}{perm_to_Z}{GEN v} as \kbd{permtonum} for a \typ{VECSMALL} input.
+
 \section{Small groups}
 
 The small (finite) groups facility is meant to deal with subgroups of Galois
