@@ -2140,6 +2140,7 @@ GEN     zncoppersmith(GEN P0, GEN N, GEN X, GEN B) ;
 GEN     QXQ_reverse(GEN a, GEN T);
 GEN     RgV_polint(GEN X, GEN Y, long v);
 GEN     RgXQ_reverse(GEN a, GEN T);
+GEN     Z_to_perm(long n, GEN x);
 GEN     ZV_indexsort(GEN L);
 long    ZV_search(GEN x, GEN y);
 GEN     ZV_sort(GEN L);
@@ -2185,6 +2186,7 @@ GEN     merge_factor(GEN fx, GEN fy, void *data, int (*cmp)(void *,GEN,GEN));
 GEN     merge_sort_uniq(GEN x, GEN y, void *data, int (*cmp)(void *,GEN,GEN));
 GEN     modreverse(GEN x);
 GEN     numtoperm(long n, GEN x);
+GEN     perm_to_Z(GEN v);
 GEN     permtonum(GEN x);
 GEN     polhermite(long n, long v);
 GEN     polhermite_eval(long n, GEN x);
